[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/GUI/DialogueBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/BranchingDialogueBox.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Resources/GUI/BranchingDialogueButtonNormal.tres" type="StyleBox" id=3]
[ext_resource path="res://Scripts/Resources/GUI/BranchingDialogueButtonFocus.tres" type="StyleBox" id=4]
[ext_resource path="res://Scripts/Resources/GUI/BranchingDialogueButtonPressed.tres" type="StyleBox" id=5]
[ext_resource path="res://fonts/kindergarten.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 6 )

[node name="DialogueBox" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Panel" parent="." index="0"]
anchor_left = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = -1.0
margin_right = 0.0
margin_bottom = 0.0
rect_pivot_offset = Vector2( 128, 49 )

[node name="Label" parent="Panel" index="0"]
margin_bottom = -50.0

[node name="option1" type="Button" parent="Panel" index="1"]
margin_left = 16.0
margin_top = 64.0
margin_right = 112.0
margin_bottom = 80.0
mouse_filter = 2
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
button_mask = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/option1" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "option 1"
align = 1
valign = 1

[node name="option2" type="Button" parent="Panel" index="2"]
margin_left = 144.0
margin_top = 64.0
margin_right = 240.0
margin_bottom = 80.0
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/option2" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "option 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
